# flowcast

./: .editorconfig  .gitignore  README.md  clean.ipynb  gp.ipynb  learn.ipynb  package-lock.json  package.json  predict.ipynb  prep.ipynb
.github/workflows/: deploy.yml
archive/: clean.ipynb  gpy.ipynb  lstm.ipynb
backend/: Dockerfile  package.json  pyproject.toml
backend/events/: test.json
backend/src/: index.py
backend/src/events/: access.py
backend/src/handlers/: access.py  export.py  forecast.py  onboard.py  retrain.py  train.py  update.py
backend/src/handlers/export/: export.py
backend/src/utils/: claude.py  constants.py  db.py  forecast.py  s3.py  usgs.py  utils.py  weather.py
client/: .gitignore  next.config.mjs  package.json  theme.ts  tsconfig.json
client/components/: chart.tsx  handle.tsx  nossr.tsx  selector.tsx  site.tsx  tooltip.tsx
client/components/chart/: forecast.tsx  historical.tsx
client/pages/: 404.tsx  _app.tsx  _document.tsx  index.tsx
client/pages/sites/: [site].tsx
client/public/: pulse.css
client/src/: app.tsx  index.css  index.tsx
client/src/chart/: axisLabel.tsx  chart.tsx  tooltip.tsx
client/src/utils/: api.ts  constants.ts  misc.ts  types.ts
client/test/data/: forecast.json
client/utils/: api.ts  constants.ts  misc.ts  types.ts
data/: gageheight.csv  model.pickle  watertemp.csv
infra/: app.py  cdk.context.json  cdk.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
infra/.aws-sam/: build.toml
infra/cloud/: cloud_stack.py  flowcast_stack.py
infra/lib/: flowcast.ts
infra/stacks/: flowcast_stack.py
infra/tests/unit/: test_cloud_stack.py
notebooks/: gpflow.ipynb  learn.ipynb  predict.ipynb  prep.ipynb  validate_prod.ipynb
notebooks/live/: reset_to_jumpstart.ipynb  validate_model.ipynb  view_data.ipynb
output/: in_scaler.pickle  model.h5  out_scaler.pickle  scaler.pickle
src/: Dockerfile  index.py  requirements.txt
src/backend/: Dockerfile
src/backend/handlers/: access.py  forecast.py  retrain.py
src/backend/utils/: utils.py
src/client/: package.json
src/client/src/: App.tsx
src/handlers/: access.py  forecast.py  retrain.py  update.py
src/utils/: db.py
