[tool.poetry]
name = "flowcast/infra"
version = "0.1.0"
description = ""
authors = ["Jai Smith <jksmithnyc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
aws-cdk-lib = "^2.115.0"
aws-cdk-aws-amplify-alpha = "^2.115.0a0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
