[tool.poetry]
name = "flowcast/infra"
version = "0.1.0"
description = ""
authors = ["Jai Smith <jksmithnyc@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
aws-cdk-lib = "^2.133.0"
aws-cdk-aws-amplify-alpha = "^2.133.0-alpha.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
